// Vitest Snapshot v1

exports[`csr snapshot test > csr test ./examples/affix/demos/base.vue 1`] = `
<div
  class="affix-base"
>
  <div>
    <div>
      
      <button
        class="t-button t-size-m t-button--variant-base t-button--theme-primary"
        type="button"
      >
        <span
          class="t-button__text"
        >
          
          固钉
          
        </span>
      </button>
      
    </div>
  </div>
</div>
`;

exports[`csr snapshot test > csr test ./examples/affix/demos/container.vue 1`] = `
<div
  class="affix-container"
  data-v-43b80f2b=""
>
  <div
    class="affix-container-demo1"
    data-v-43b80f2b=""
  >
    <div
      class="background"
      data-v-43b80f2b=""
    >
      <div
        data-v-43b80f2b=""
      >
        <div>
          
          <button
            class="t-button t-size-m t-button--variant-base t-button--theme-primary"
            data-v-43b80f2b=""
            type="button"
          >
            <span
              class="t-button__text"
            >
              
              affixed :false
              
            </span>
          </button>
          
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`csr snapshot test > csr test ./examples/alert/demos/base.vue 1`] = `
<div
  class="tdesign-demo-block"
>
  <div
    class="t-alert t-alert--success"
  >
    <div
      class="t-alert__icon"
    >
      <svg
        class="t-icon t-icon-check-circle-filled"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8 15A7 7 0 108 1a7 7 0 000 14zM4.5 8.2l.7-.7L7 9.3l3.8-3.8.7.7L7 10.7 4.5 8.2z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </div>
    <div
      class="t-alert__content"
    >
      <!---->
      <div
        class="t-alert__message"
      >
        <div
          class="t-alert__description"
        >
          这是一条成功的消息提示
          <!---->
        </div>
        <!---->
      </div>
    </div>
    <!---->
  </div>
  <div
    class="t-alert t-alert--info"
  >
    <div
      class="t-alert__icon"
    >
      <svg
        class="t-icon t-icon-info-circle-filled"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </div>
    <div
      class="t-alert__content"
    >
      <!---->
      <div
        class="t-alert__message"
      >
        <div
          class="t-alert__description"
        >
          <div>
            这是一条普通的消息提示
          </div>
          <!---->
        </div>
        <!---->
      </div>
    </div>
    <!---->
  </div>
  <div
    class="t-alert t-alert--warning"
  >
    <div
      class="t-alert__icon"
    >
      <svg
        class="t-icon t-icon-error-circle-filled"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M15 8A7 7 0 101 8a7 7 0 0014 0zM8.5 4v5.5h-1V4h1zm-1.1 7h1.2v1.2H7.4V11z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </div>
    <div
      class="t-alert__content"
    >
      <!---->
      <div
        class="t-alert__message"
      >
        <div
          class="t-alert__description"
        >
          
           这是一条警示信息 
          
          <!---->
        </div>
        <!---->
      </div>
    </div>
    <!---->
  </div>
  <div
    class="t-alert t-alert--error"
  >
    <div
      class="t-alert__icon"
    >
      <svg
        class="t-icon t-icon-error-circle-filled"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M15 8A7 7 0 101 8a7 7 0 0014 0zM8.5 4v5.5h-1V4h1zm-1.1 7h1.2v1.2H7.4V11z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </div>
    <div
      class="t-alert__content"
    >
      <!---->
      <div
        class="t-alert__message"
      >
        <div
          class="t-alert__description"
        >
          
           高危操作/出错信息提示 
          
          <!---->
        </div>
        <!---->
      </div>
    </div>
    <!---->
  </div>
</div>
`;

exports[`csr snapshot test > csr test ./examples/alert/demos/close.vue 1`] = `
<div
  class="tdesign-demo-block"
>
  <div
    class="t-alert t-alert--success"
  >
    <div
      class="t-alert__icon"
    >
      <svg
        class="t-icon t-icon-check-circle-filled"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8 15A7 7 0 108 1a7 7 0 000 14zM4.5 8.2l.7-.7L7 9.3l3.8-3.8.7.7L7 10.7 4.5 8.2z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </div>
    <div
      class="t-alert__content"
    >
      <!---->
      <div
        class="t-alert__message"
      >
        <div
          class="t-alert__description"
        >
          这是一条成功的消息提示
          <!---->
        </div>
        <!---->
      </div>
    </div>
    <div
      class="t-alert__close"
    >
      <svg
        class="t-icon t-icon-close"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </div>
  </div>
  <div
    class="t-alert t-alert--info"
  >
    <div
      class="t-alert__icon"
    >
      <svg
        class="t-icon t-icon-info-circle-filled"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </div>
    <div
      class="t-alert__content"
    >
      <!---->
      <div
        class="t-alert__message"
      >
        <div
          class="t-alert__description"
        >
          这是一条普通的消息提示
          <!---->
        </div>
        <!---->
      </div>
    </div>
    <div
      class="t-alert__close"
    >
      知道了
    </div>
  </div>
  <div
    class="t-alert t-alert--warning"
  >
    <div
      class="t-alert__icon"
    >
      <svg
        class="t-icon t-icon-error-circle-filled"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M15 8A7 7 0 101 8a7 7 0 0014 0zM8.5 4v5.5h-1V4h1zm-1.1 7h1.2v1.2H7.4V11z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </div>
    <div
      class="t-alert__content"
    >
      <!---->
      <div
        class="t-alert__message"
      >
        <div
          class="t-alert__description"
        >
          这是一条警示信息
          <!---->
        </div>
        <!---->
      </div>
    </div>
    <div
      class="t-alert__close"
    >
      FunctionPropClose
    </div>
  </div>
  <div
    class="t-alert t-alert--error"
  >
    <div
      class="t-alert__icon"
    >
      <svg
        class="t-icon t-icon-error-circle-filled"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M15 8A7 7 0 101 8a7 7 0 0014 0zM8.5 4v5.5h-1V4h1zm-1.1 7h1.2v1.2H7.4V11z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </div>
    <div
      class="t-alert__content"
    >
      <!---->
      <div
        class="t-alert__message"
      >
        <div
          class="t-alert__description"
        >
          高危操作/出错信息提示
          <!---->
        </div>
        <!---->
      </div>
    </div>
    <div
      class="t-alert__close"
    >
       Slot Close 
    </div>
  </div>
</div>
`;

exports[`csr snapshot test > csr test ./examples/alert/demos/collapse.vue 1`] = `
<div
  class="tdesign-demo-block"
>
  <div
    class="t-alert t-alert--info"
  >
    <div
      class="t-alert__icon"
    >
      <svg
        class="t-icon t-icon-info-circle-filled"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </div>
    <div
      class="t-alert__content"
    >
      <!---->
      <div
        class="t-alert__message"
      >
        <div
          class="t-alert__description"
        >
          
          <div>
            <span>
              这是折叠的第一条消息
            </span>
          </div>
          <div>
            <span>
              这是折叠的第二条消息
            </span>
          </div>
          
          <div
            class="t-alert__collapse"
          >
            展开更多
          </div>
        </div>
        <!---->
      </div>
    </div>
    <div
      class="t-alert__close"
    >
      <svg
        class="t-icon t-icon-close"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`csr snapshot test > csr test ./examples/alert/demos/icon.vue 1`] = `
<div
  class="tdesign-demo-block"
>
  <div
    class="t-alert t-alert--success"
  >
    <div
      class="t-alert__icon"
    >
      <svg
        class="t-icon t-icon-check-circle-filled"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8 15A7 7 0 108 1a7 7 0 000 14zM4.5 8.2l.7-.7L7 9.3l3.8-3.8.7.7L7 10.7 4.5 8.2z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </div>
    <div
      class="t-alert__content"
    >
      <!---->
      <div
        class="t-alert__message"
      >
        <div
          class="t-alert__description"
        >
          这是一条成功的消息提示
          <!---->
        </div>
        <!---->
      </div>
    </div>
    <!---->
  </div>
  <div
    class="t-alert t-alert--info"
  >
    <div
      class="t-alert__icon"
    >
      <svg
        class="t-icon t-icon-info-circle-filled"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </div>
    <div
      class="t-alert__content"
    >
      <!---->
      <div
        class="t-alert__message"
      >
        <div
          class="t-alert__description"
        >
          这是一条普通的消息提示
          <!---->
        </div>
        <!---->
      </div>
    </div>
    <!---->
  </div>
  <div
    class="t-alert t-alert--warning"
  >
    <div
      class="t-alert__icon"
    >
      <svg
        class="t-icon t-icon-error-circle-filled"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M15 8A7 7 0 101 8a7 7 0 0014 0zM8.5 4v5.5h-1V4h1zm-1.1 7h1.2v1.2H7.4V11z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </div>
    <div
      class="t-alert__content"
    >
      <!---->
      <div
        class="t-alert__message"
      >
        <div
          class="t-alert__description"
        >
          这是一条警示消息提示
          <!---->
        </div>
        <!---->
      </div>
    </div>
    <!---->
  </div>
  <div
    class="t-alert t-alert--error"
  >
    <div
      class="t-alert__icon"
    >
      <svg
        class="t-icon t-icon-error-circle-filled"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M15 8A7 7 0 101 8a7 7 0 0014 0zM8.5 4v5.5h-1V4h1zm-1.1 7h1.2v1.2H7.4V11z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </div>
    <div
      class="t-alert__content"
    >
      <!---->
      <div
        class="t-alert__message"
      >
        <div
          class="t-alert__description"
        >
          高危操作/出错信息提示
          <!---->
        </div>
        <!---->
      </div>
    </div>
    <!---->
  </div>
  <div
    class="t-alert t-alert--warning"
  >
    <div
      class="t-alert__icon"
    >
      <svg
        class="t-icon t-icon-error-circle-filled"
      >
        <use
          href="#t-icon-error-circle-filled"
        />
      </svg>
    </div>
    <div
      class="t-alert__content"
    >
      <!---->
      <div
        class="t-alert__message"
      >
        <div
          class="t-alert__description"
        >
          这是一条警示信息(以function形式自定义icon)
          <!---->
        </div>
        <!---->
      </div>
    </div>
    <!---->
  </div>
  <div
    class="t-alert t-alert--error"
  >
    <div
      class="t-alert__icon"
    >
      <svg
        class="t-icon t-icon-error-circle-filled"
      >
        <use
          href="#t-icon-error-circle-filled"
        />
      </svg>
    </div>
    <div
      class="t-alert__content"
    >
      <!---->
      <div
        class="t-alert__message"
      >
        <div
          class="t-alert__description"
        >
          高危操作/出错信息提示(以slot形式自定义icon)
          <!---->
        </div>
        <!---->
      </div>
    </div>
    <!---->
  </div>
</div>
`;

exports[`csr snapshot test > csr test ./examples/alert/demos/operation.vue 1`] = `
<div
  class="tdesign-demo-block"
>
  <div
    class="t-alert t-alert--info"
  >
    <div
      class="t-alert__icon"
    >
      <svg
        class="t-icon t-icon-info-circle-filled"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </div>
    <div
      class="t-alert__content"
    >
      <!---->
      <div
        class="t-alert__message"
      >
        <div
          class="t-alert__description"
        >
          这是一条普通的消息提示
          <!---->
        </div>
        <div
          class="t-alert__operation"
        >
          
          <span>
            相关操作
          </span>
          
        </div>
      </div>
    </div>
    <div
      class="t-alert__close"
    >
      <svg
        class="t-icon t-icon-close"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`csr snapshot test > csr test ./examples/alert/demos/title.vue 1`] = `
<div
  class="tdesign-demo-block"
>
  <div
    class="t-alert t-alert--info"
  >
    <div
      class="t-alert__icon"
    >
      <svg
        class="t-icon t-icon-info-circle-filled"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </div>
    <div
      class="t-alert__content"
    >
      <div
        class="t-alert__title"
      >
         
        这是一条普通的消息提示
      </div>
      <div
        class="t-alert__message"
      >
        <div
          class="t-alert__description"
        >
          这是与普通的消息提示相关的文字辅助说明
          <!---->
        </div>
        <div
          class="t-alert__operation"
        >
          
          <span>
            相关操作
          </span>
          
        </div>
      </div>
    </div>
    <div
      class="t-alert__close"
    >
      <svg
        class="t-icon t-icon-close"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8 8.92L11.08 12l.92-.92L8.92 8 12 4.92 11.08 4 8 7.08 4.92 4 4 4.92 7.08 8 4 11.08l.92.92L8 8.92z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`csr snapshot test > csr test ./examples/anchor/demos/base.vue 1`] = `
<div
  class="anchor-demo"
  data-v-775183f2=""
  id="#default"
  style="display: flex;"
>
  <div
    data-v-775183f2=""
    style="flex: 1;"
  />
  <div
    data-v-775183f2=""
  >
    <div>
      
      <div
        class="t-anchor t-size-m"
      >
        <div
          class="t-anchor__line"
        >
          <div
            class="t-anchor__line-cursor-wrapper"
          >
            <div
              class="t-anchor__line-cursor"
            />
          </div>
        </div>
        
        <div
          class="t-anchor__item"
          data-v-775183f2=""
        >
          <a
            class="t-anchor__item-link"
            href="#基础锚点"
            target="_self"
            title="基础锚点"
          >
            基础锚点
          </a>
          <!---->
        </div>
        <div
          class="t-anchor__item"
          data-v-775183f2=""
        >
          <a
            class="t-anchor__item-link"
            href="#多级锚点"
            target="_self"
            title="多级锚点"
          >
            多级锚点
          </a>
          <!---->
        </div>
        <div
          class="t-anchor__item"
          data-v-775183f2=""
        >
          <a
            class="t-anchor__item-link"
            href="#指定容器锚点"
            target="_self"
            title="指定容器锚点"
          >
            指定容器锚点
          </a>
          <!---->
        </div>
        <div
          class="t-anchor__item"
          data-v-775183f2=""
        >
          <a
            class="t-anchor__item-link"
            href="#特定交互锚点"
            target="_self"
            title="特定交互锚点"
          >
            特定交互锚点
          </a>
          <!---->
        </div>
        <div
          class="t-anchor__item"
          data-v-775183f2=""
        >
          <a
            class="t-anchor__item-link"
            href="#不同尺寸的锚点"
            target="_self"
            title="不同尺寸的锚点"
          >
            不同尺寸的锚点
          </a>
          <!---->
        </div>
        
      </div>
      
    </div>
  </div>
</div>
`;

exports[`csr snapshot test > csr test ./examples/anchor/demos/container.vue 1`] = `
<div
  class="anchor-demo anchor-container-demo"
  data-v-3471b930=""
  id="#container"
>
  <div
    class="t-anchor t-size-m"
    data-v-3471b930=""
    id="#default"
  >
    <div
      class="t-anchor__line"
    >
      <div
        class="t-anchor__line-cursor-wrapper"
      >
        <div
          class="t-anchor__line-cursor"
        />
      </div>
    </div>
    
    <div
      class="t-anchor__item"
      data-v-3471b930=""
    >
      <a
        class="t-anchor__item-link"
        href="##content-1"
        target="_self"
        title="content-1"
      >
        content-1
      </a>
      <!---->
    </div>
    <div
      class="t-anchor__item"
      data-v-3471b930=""
    >
      <a
        class="t-anchor__item-link"
        href="##content-2"
        target="_self"
        title="content-2"
      >
        content-2
      </a>
      <!---->
    </div>
    <div
      class="t-anchor__item"
      data-v-3471b930=""
    >
      <a
        class="t-anchor__item-link"
        href="##content-3"
        target="_self"
        title="content-3"
      >
        content-3
      </a>
      <!---->
    </div>
    <div
      class="t-anchor__item"
      data-v-3471b930=""
    >
      <a
        class="t-anchor__item-link"
        href="##content-4"
        target="_self"
        title="content-4"
      >
        content-4
      </a>
      <!---->
    </div>
    
  </div>
  <div
    data-v-3471b930=""
    id="anchor-container"
  >
    <div
      class="anchor-content-1"
      data-v-3471b930=""
      id="#content-1"
    >
      anchor-content-1
    </div>
    <div
      class="anchor-content-2"
      data-v-3471b930=""
      id="#content-2"
    >
      anchor-content-2
    </div>
    <div
      class="anchor-content-3"
      data-v-3471b930=""
      id="#content-3"
    >
      anchor-content-3
    </div>
    <div
      class="anchor-content-4"
      data-v-3471b930=""
      id="#content-4"
    >
      anchor-content-4
    </div>
    <div
      class="anchor-content-5"
      data-v-3471b930=""
      id="#content-5"
    >
      anchor-content-5
    </div>
  </div>
</div>
`;

exports[`csr snapshot test > csr test ./examples/anchor/demos/cursor.vue 1`] = `
<div
  class="anchor-demo"
  data-v-5deb27b7=""
>
  <div
    class="t-anchor t-size-m"
    data-v-5deb27b7=""
  >
    <div
      class="t-anchor__line"
    >
      <div
        class="t-anchor__line-cursor-wrapper"
      >
        
        <div
          class="test-cursor"
          data-v-5deb27b7=""
        />
        
      </div>
    </div>
    
    <div
      class="t-anchor__item"
      data-v-5deb27b7=""
    >
      <a
        class="t-anchor__item-link"
        href="##default"
        target="_self"
        title="定义"
      >
        定义
      </a>
      <!---->
    </div>
    <div
      class="t-anchor__item"
      data-v-5deb27b7=""
    >
      <a
        class="t-anchor__item-link"
        href="##multiple"
        target="_self"
        title="服务功能"
      >
        服务功能
      </a>
      <!---->
    </div>
    <div
      class="t-anchor__item"
      data-v-5deb27b7=""
    >
      <a
        class="t-anchor__item-link"
        href="##small"
        target="_self"
        title="使用指南"
      >
        使用指南
      </a>
      <!---->
    </div>
    <div
      class="t-anchor__item"
      data-v-5deb27b7=""
    >
      <a
        class="t-anchor__item-link"
        href="##large"
        target="_self"
        title="创建签名"
      >
        创建签名
      </a>
      <!---->
    </div>
    <div
      class="t-anchor__item"
      data-v-5deb27b7=""
    >
      <a
        class="t-anchor__item-link"
        href="##container"
        target="_self"
        title="创建内容"
      >
        创建内容
      </a>
      <!---->
    </div>
    <div
      class="t-anchor__item"
      data-v-5deb27b7=""
    >
      <a
        class="t-anchor__item-link"
        href="##anchor-target-6"
        target="_self"
        title="保密协议"
      >
        保密协议
      </a>
      <!---->
    </div>
    <div
      class="t-anchor__item"
      data-v-5deb27b7=""
    >
      <a
        class="t-anchor__item-link"
        href="##anchor-target-7"
        target="_self"
        title="其他"
      >
        其他
      </a>
      <!---->
    </div>
    
  </div>
</div>
`;

exports[`csr snapshot test > csr test ./examples/anchor/demos/large.vue 1`] = `
<div
  class="anchor-demo"
  data-v-0ef51e6a=""
  id="#large"
>
  <div
    class="t-anchor t-size-l"
    data-v-0ef51e6a=""
  >
    <div
      class="t-anchor__line"
    >
      <div
        class="t-anchor__line-cursor-wrapper"
      >
        <div
          class="t-anchor__line-cursor"
        />
      </div>
    </div>
    
    <div
      class="t-anchor__item"
      data-v-0ef51e6a=""
    >
      <a
        class="t-anchor__item-link"
        href="##default"
        target="_self"
        title="定义"
      >
        定义
      </a>
      <!---->
    </div>
    <div
      class="t-anchor__item"
      data-v-0ef51e6a=""
    >
      <a
        class="t-anchor__item-link"
        href="##multiple"
        target="_self"
        title="服务功能"
      >
        服务功能
      </a>
      <!---->
    </div>
    <div
      class="t-anchor__item"
      data-v-0ef51e6a=""
    >
      <a
        class="t-anchor__item-link"
        href="##small"
        target="_self"
        title="使用指南"
      >
        使用指南
      </a>
      <!---->
    </div>
    <div
      class="t-anchor__item"
      data-v-0ef51e6a=""
    >
      <a
        class="t-anchor__item-link"
        href="##large"
        target="_self"
        title="创建签名"
      >
        创建签名
      </a>
      <!---->
    </div>
    <div
      class="t-anchor__item"
      data-v-0ef51e6a=""
    >
      <a
        class="t-anchor__item-link"
        href="##container"
        target="_self"
        title="创建内容"
      >
        创建内容
      </a>
      <!---->
    </div>
    <div
      class="t-anchor__item"
      data-v-0ef51e6a=""
    >
      <a
        class="t-anchor__item-link"
        href="##anchor-target-6"
        target="_self"
        title="保密协议"
      >
        保密协议
      </a>
      <!---->
    </div>
    <div
      class="t-anchor__item"
      data-v-0ef51e6a=""
    >
      <a
        class="t-anchor__item-link"
        href="##anchor-target-7"
        target="_self"
        title="其他"
      >
        其他
      </a>
      <!---->
    </div>
    
  </div>
</div>
`;

exports[`csr snapshot test > csr test ./examples/anchor/demos/multiple.vue 1`] = `
<div
  class="anchor-demo"
  id="#multiple"
>
  <div
    class="t-anchor t-size-m"
  >
    <div
      class="t-anchor__line"
    >
      <div
        class="t-anchor__line-cursor-wrapper"
      >
        <div
          class="t-anchor__line-cursor"
        />
      </div>
    </div>
    
    <div
      class="t-anchor__item"
    >
      <a
        class="t-anchor__item-link"
        href="##default"
        target="_self"
        title="定义"
      >
        定义
      </a>
      <!---->
    </div>
    <div
      class="t-anchor__item"
    >
      <a
        class="t-anchor__item-link"
        href="##multiple"
        target="_self"
        title="服务功能"
      >
        服务功能
      </a>
      <!---->
    </div>
    <div
      class="t-anchor__item"
    >
      <a
        class="t-anchor__item-link"
        href="##small"
        target="_self"
        title="使用指南"
      >
        使用指南
      </a>
      
      <div
        class="t-anchor__item"
      >
        <a
          class="t-anchor__item-link"
          href="##large"
          target="_self"
          title="创建签名"
        >
          创建签名
        </a>
        <!---->
      </div>
      <div
        class="t-anchor__item"
      >
        <a
          class="t-anchor__item-link"
          href="##container"
          target="_self"
          title="创建内容"
        >
          创建内容
        </a>
        <!---->
      </div>
      
    </div>
    <div
      class="t-anchor__item"
    >
      <a
        class="t-anchor__item-link"
        href="##anchor-target-6"
        target="_self"
        title="保密协议"
      >
        保密协议
      </a>
      <!---->
    </div>
    <div
      class="t-anchor__item"
    >
      <a
        class="t-anchor__item-link"
        href="##anchor-target-7"
        target="_self"
        title="其他"
      >
        其他
      </a>
      <!---->
    </div>
    
  </div>
</div>
`;

exports[`csr snapshot test > csr test ./examples/anchor/demos/small.vue 1`] = `
<div
  class="anchor-demo"
  data-v-fdf99b94=""
  id="#small"
>
  <div
    class="t-anchor t-size-s"
    data-v-fdf99b94=""
  >
    <div
      class="t-anchor__line"
    >
      <div
        class="t-anchor__line-cursor-wrapper"
      >
        <div
          class="t-anchor__line-cursor"
        />
      </div>
    </div>
    
    <div
      class="t-anchor__item"
      data-v-fdf99b94=""
    >
      <a
        class="t-anchor__item-link"
        href="##default"
        target="_self"
        title="定义"
      >
        定义
      </a>
      <!---->
    </div>
    <div
      class="t-anchor__item"
      data-v-fdf99b94=""
    >
      <a
        class="t-anchor__item-link"
        href="##multiple"
        target="_self"
        title="服务功能"
      >
        服务功能
      </a>
      <!---->
    </div>
    <div
      class="t-anchor__item"
      data-v-fdf99b94=""
    >
      <a
        class="t-anchor__item-link"
        href="##small"
        target="_self"
        title="使用指南"
      >
        使用指南
      </a>
      <!---->
    </div>
    <div
      class="t-anchor__item"
      data-v-fdf99b94=""
    >
      <a
        class="t-anchor__item-link"
        href="##large"
        target="_self"
        title="创建签名"
      >
        创建签名
      </a>
      <!---->
    </div>
    <div
      class="t-anchor__item"
      data-v-fdf99b94=""
    >
      <a
        class="t-anchor__item-link"
        href="##container"
        target="_self"
        title="创建内容"
      >
        创建内容
      </a>
      <!---->
    </div>
    <div
      class="t-anchor__item"
      data-v-fdf99b94=""
    >
      <a
        class="t-anchor__item-link"
        href="##anchor-target-6"
        target="_self"
        title="保密协议"
      >
        保密协议
      </a>
      <!---->
    </div>
    <div
      class="t-anchor__item"
      data-v-fdf99b94=""
    >
      <a
        class="t-anchor__item-link"
        href="##anchor-target-7"
        target="_self"
        title="其他"
      >
        其他
      </a>
      <!---->
    </div>
    
  </div>
</div>
`;

exports[`csr snapshot test > csr test ./examples/anchor/demos/target.vue 1`] = `
<div
  class="anchor-demo"
  id="#anchor-target"
>
  <div
    class="t-anchor__target"
    id="#anchor-target-1"
  >
    
     定义 
    
    
    <svg
      class="t-icon t-icon-file-copy t-copy"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M4 1.92C4 1.34 4.52 1 5 1h4.37a1 1 0 01.71.3L13.71 5a1 1 0 01.29.7v6.38c0 .58-.52.92-1 .92H5c-.48 0-1-.34-1-.92V1.92zM5 2v10h8V6.01H9V2H5zm5 .65V5h2.32L10 2.65z"
        fill="currentColor"
        fill-opacity="0.9"
      />
      <path
        d="M2 5v9.01a1 1 0 001 1h8v-1H3V5H2z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
    <!---->
    
  </div>
  <div
    class="t-anchor__target"
    id="#anchor-target-2"
  >
    
     服务功能 
    
    
    <svg
      class="t-icon t-icon-file-copy t-copy"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M4 1.92C4 1.34 4.52 1 5 1h4.37a1 1 0 01.71.3L13.71 5a1 1 0 01.29.7v6.38c0 .58-.52.92-1 .92H5c-.48 0-1-.34-1-.92V1.92zM5 2v10h8V6.01H9V2H5zm5 .65V5h2.32L10 2.65z"
        fill="currentColor"
        fill-opacity="0.9"
      />
      <path
        d="M2 5v9.01a1 1 0 001 1h8v-1H3V5H2z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
    <!---->
    
  </div>
  <div
    class="t-anchor__target"
    id="#anchor-target-3"
  >
    
     使用指南 
    
    
    <svg
      class="t-icon t-icon-file-copy t-copy"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M4 1.92C4 1.34 4.52 1 5 1h4.37a1 1 0 01.71.3L13.71 5a1 1 0 01.29.7v6.38c0 .58-.52.92-1 .92H5c-.48 0-1-.34-1-.92V1.92zM5 2v10h8V6.01H9V2H5zm5 .65V5h2.32L10 2.65z"
        fill="currentColor"
        fill-opacity="0.9"
      />
      <path
        d="M2 5v9.01a1 1 0 001 1h8v-1H3V5H2z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
    <!---->
    
  </div>
  <div
    class="t-anchor__target"
    id="#anchor-target-4"
  >
    
     创建签名 
    
    
    <svg
      class="t-icon t-icon-file-copy t-copy"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M4 1.92C4 1.34 4.52 1 5 1h4.37a1 1 0 01.71.3L13.71 5a1 1 0 01.29.7v6.38c0 .58-.52.92-1 .92H5c-.48 0-1-.34-1-.92V1.92zM5 2v10h8V6.01H9V2H5zm5 .65V5h2.32L10 2.65z"
        fill="currentColor"
        fill-opacity="0.9"
      />
      <path
        d="M2 5v9.01a1 1 0 001 1h8v-1H3V5H2z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
    <!---->
    
  </div>
  <div
    class="t-anchor__target"
    id="#anchor-target-5"
  >
    
     创建内容 
    
    
    <svg
      class="t-icon t-icon-file-copy t-copy"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M4 1.92C4 1.34 4.52 1 5 1h4.37a1 1 0 01.71.3L13.71 5a1 1 0 01.29.7v6.38c0 .58-.52.92-1 .92H5c-.48 0-1-.34-1-.92V1.92zM5 2v10h8V6.01H9V2H5zm5 .65V5h2.32L10 2.65z"
        fill="currentColor"
        fill-opacity="0.9"
      />
      <path
        d="M2 5v9.01a1 1 0 001 1h8v-1H3V5H2z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
    <!---->
    
  </div>
  <div
    class="t-anchor__target"
    id="#anchor-target-6"
  >
    
     保密协议 
    
    
    <svg
      class="t-icon t-icon-file-copy t-copy"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M4 1.92C4 1.34 4.52 1 5 1h4.37a1 1 0 01.71.3L13.71 5a1 1 0 01.29.7v6.38c0 .58-.52.92-1 .92H5c-.48 0-1-.34-1-.92V1.92zM5 2v10h8V6.01H9V2H5zm5 .65V5h2.32L10 2.65z"
        fill="currentColor"
        fill-opacity="0.9"
      />
      <path
        d="M2 5v9.01a1 1 0 001 1h8v-1H3V5H2z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
    <!---->
    
  </div>
  <div
    class="t-anchor__target"
    id="#anchor-target-7"
  >
    
     其他 
    
    
    <svg
      class="t-icon t-icon-file-copy t-copy"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M4 1.92C4 1.34 4.52 1 5 1h4.37a1 1 0 01.71.3L13.71 5a1 1 0 01.29.7v6.38c0 .58-.52.92-1 .92H5c-.48 0-1-.34-1-.92V1.92zM5 2v10h8V6.01H9V2H5zm5 .65V5h2.32L10 2.65z"
        fill="currentColor"
        fill-opacity="0.9"
      />
      <path
        d="M2 5v9.01a1 1 0 001 1h8v-1H3V5H2z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
    <!---->
    
  </div>
</div>
`;

exports[`csr snapshot test > csr test ./examples/avatar/demos/adjust.vue 1`] = `
<div
  class="demo-avatar"
  data-v-f47fb568=""
>
  <div
    class="t-avatar t-avatar--circle"
    data-v-f47fb568=""
  >
    <span>
      
      王
      
    </span>
  </div>
  <div
    class="t-avatar t-avatar--circle"
    data-v-f47fb568=""
  >
    <span>
      
      王亿
      
    </span>
  </div>
  <div
    class="t-avatar t-avatar--circle"
    data-v-f47fb568=""
  >
    <span>
      
      王亿亿
      
    </span>
  </div>
</div>
`;

exports[`csr snapshot test > csr test ./examples/avatar/demos/base.vue 1`] = `
<div
  class="demo-avatar"
  data-v-32d02e64=""
>
  <div
    class="t-avatar t-avatar--circle"
    data-v-32d02e64=""
  >
    <img
      alt=""
      src="https://tdesign.gtimg.com/site/avatar.jpg"
    />
  </div>
  <div
    class="t-avatar t-avatar--circle"
    data-v-32d02e64=""
  >
    <span>
      
      W
      
    </span>
  </div>
  <div
    class="t-avatar t-avatar--circle t-avatar__icon"
    data-v-32d02e64=""
  >
    
    <svg
      class="t-icon t-icon-user"
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M11.5 5a3.5 3.5 0 11-7 0 3.5 3.5 0 017 0zm-1 0a2.5 2.5 0 10-5 0 2.5 2.5 0 005 0zM13.96 10.85c.34.16.54.5.54.87V14a.5.5 0 01-.5.5H2a.5.5 0 01-.5-.5v-2.28c0-.37.2-.7.54-.87a13.79 13.79 0 0111.92 0zM8 10.5c-1.97 0-3.83.45-5.5 1.24v1.76h11v-1.76A12.78 12.78 0 008 10.5z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
    
    
  </div>
  <div
    class="t-avatar t-avatar--circle t-avatar__icon"
    data-v-32d02e64=""
  >
    
    
    <svg
      class="t-icon t-icon-user"
      data-v-32d02e64=""
      fill="none"
      height="1em"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M11.5 5a3.5 3.5 0 11-7 0 3.5 3.5 0 017 0zm-1 0a2.5 2.5 0 10-5 0 2.5 2.5 0 005 0zM13.96 10.85c.34.16.54.5.54.87V14a.5.5 0 01-.5.5H2a.5.5 0 01-.5-.5v-2.28c0-.37.2-.7.54-.87a13.79 13.79 0 0111.92 0zM8 10.5c-1.97 0-3.83.45-5.5 1.24v1.76h11v-1.76A12.78 12.78 0 008 10.5z"
        fill="currentColor"
        fill-opacity="0.9"
      />
    </svg>
    
    
    
  </div>
</div>
`;

exports[`csr snapshot test > csr test ./examples/avatar/demos/group.vue 1`] = `
<div
  class="demo-avatar"
  data-v-02e54e52=""
>
  <div
    class="demo-avatar-block"
    data-v-02e54e52=""
  >
    <div
      class="t-avatar-group t-avatar--offset-right"
      data-v-02e54e52=""
    >
      
      
      <div
        class="t-avatar t-avatar--circle"
        data-v-02e54e52=""
      >
        <img
          alt=""
          src="https://tdesign.gtimg.com/site/avatar.jpg"
        />
      </div>
      <div
        class="t-avatar t-avatar--circle"
        data-v-02e54e52=""
      >
        <span>
          
          W
          
        </span>
      </div>
      <div
        class="t-avatar t-avatar--circle t-avatar__icon"
        data-v-02e54e52=""
      >
        
        <svg
          class="t-icon t-icon-user"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M11.5 5a3.5 3.5 0 11-7 0 3.5 3.5 0 017 0zm-1 0a2.5 2.5 0 10-5 0 2.5 2.5 0 005 0zM13.96 10.85c.34.16.54.5.54.87V14a.5.5 0 01-.5.5H2a.5.5 0 01-.5-.5v-2.28c0-.37.2-.7.54-.87a13.79 13.79 0 0111.92 0zM8 10.5c-1.97 0-3.83.45-5.5 1.24v1.76h11v-1.76A12.78 12.78 0 008 10.5z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
        
        
      </div>
      
      
    </div>
  </div>
  <div
    class="demo-avatar-block"
    data-v-02e54e52=""
  >
    <div
      class="t-avatar-group t-avatar--offset-right"
      data-v-02e54e52=""
    >
      
      
      <div
        class="t-avatar t-avatar--circle"
        data-v-02e54e52=""
      >
        <img
          alt=""
          src="https://tdesign.gtimg.com/site/avatar.jpg"
        />
      </div>
      <div
        class="t-avatar t-avatar--circle"
        data-v-02e54e52=""
      >
        <span>
          
          W
          
        </span>
      </div>
      <div
        class="t-avatar t-avatar--circle t-avatar__icon"
        data-v-02e54e52=""
      >
        
        <svg
          class="t-icon t-icon-user"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M11.5 5a3.5 3.5 0 11-7 0 3.5 3.5 0 017 0zm-1 0a2.5 2.5 0 10-5 0 2.5 2.5 0 005 0zM13.96 10.85c.34.16.54.5.54.87V14a.5.5 0 01-.5.5H2a.5.5 0 01-.5-.5v-2.28c0-.37.2-.7.54-.87a13.79 13.79 0 0111.92 0zM8 10.5c-1.97 0-3.83.45-5.5 1.24v1.76h11v-1.76A12.78 12.78 0 008 10.5z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
        
        
      </div>
      
      
    </div>
  </div>
</div>
`;

exports[`csr snapshot test > csr test ./examples/avatar/demos/group-cascading.vue 1`] = `
<div
  class="demo-avatar"
  data-v-6b9684b6=""
>
  <div
    class="demo-avatar-block"
    data-v-6b9684b6=""
  >
    <div
      class="t-avatar-group t-avatar--offset-right"
      data-v-6b9684b6=""
    >
      
      
      <div
        class="t-avatar t-avatar--circle"
        data-v-6b9684b6=""
      >
        <img
          alt=""
          src="https://tdesign.gtimg.com/site/avatar.jpg"
        />
      </div>
      <div
        class="t-avatar t-avatar--circle"
        data-v-6b9684b6=""
      >
        <span>
          
          W
          
        </span>
      </div>
      <div
        class="t-avatar t-avatar--circle t-avatar__icon"
        data-v-6b9684b6=""
      >
        
        <svg
          class="t-icon t-icon-user"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M11.5 5a3.5 3.5 0 11-7 0 3.5 3.5 0 017 0zm-1 0a2.5 2.5 0 10-5 0 2.5 2.5 0 005 0zM13.96 10.85c.34.16.54.5.54.87V14a.5.5 0 01-.5.5H2a.5.5 0 01-.5-.5v-2.28c0-.37.2-.7.54-.87a13.79 13.79 0 0111.92 0zM8 10.5c-1.97 0-3.83.45-5.5 1.24v1.76h11v-1.76A12.78 12.78 0 008 10.5z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
        
        
      </div>
      
      
    </div>
  </div>
  <div
    class="demo-avatar-block"
    data-v-6b9684b6=""
  >
    <div
      class="t-avatar-group t-avatar--offset-left"
      data-v-6b9684b6=""
    >
      
      
      <div
        class="t-avatar t-avatar--circle"
        data-v-6b9684b6=""
      >
        <img
          alt=""
          src="https://tdesign.gtimg.com/site/avatar.jpg"
        />
      </div>
      <div
        class="t-avatar t-avatar--circle"
        data-v-6b9684b6=""
      >
        <span>
          
          W
          
        </span>
      </div>
      <div
        class="t-avatar t-avatar--circle t-avatar__icon"
        data-v-6b9684b6=""
      >
        
        <svg
          class="t-icon t-icon-user"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M11.5 5a3.5 3.5 0 11-7 0 3.5 3.5 0 017 0zm-1 0a2.5 2.5 0 10-5 0 2.5 2.5 0 005 0zM13.96 10.85c.34.16.54.5.54.87V14a.5.5 0 01-.5.5H2a.5.5 0 01-.5-.5v-2.28c0-.37.2-.7.54-.87a13.79 13.79 0 0111.92 0zM8 10.5c-1.97 0-3.83.45-5.5 1.24v1.76h11v-1.76A12.78 12.78 0 008 10.5z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
        
        
      </div>
      
      
    </div>
  </div>
</div>
`;

exports[`csr snapshot test > csr test ./examples/avatar/demos/group-max.vue 1`] = `
<div
  class="demo-avatar"
  data-v-19cbd02e=""
>
  <div
    class="demo-avatar-block"
    data-v-19cbd02e=""
  >
    <div
      class="t-avatar-group t-avatar--offset-right"
      data-v-19cbd02e=""
    >
      
      
      
      <div
        class="t-avatar t-avatar--circle"
        data-v-19cbd02e=""
      >
        <img
          alt=""
          src="https://tdesign.gtimg.com/site/avatar.jpg"
        />
      </div>
      <div
        class="t-avatar t-avatar--circle"
        data-v-19cbd02e=""
      >
        <span>
          
          Avatar
          
        </span>
      </div>
      <div
        class="t-avatar t-avatar--circle"
      >
        <span>
          
          +1
          
        </span>
      </div>
      
      
      
    </div>
  </div>
  <div
    class="demo-avatar-block"
    data-v-19cbd02e=""
  >
    <div
      class="t-avatar-group t-avatar--offset-right"
      data-v-19cbd02e=""
    >
      
      
      
      <div
        class="t-avatar t-avatar--circle"
        data-v-19cbd02e=""
      >
        <img
          alt=""
          src="https://tdesign.gtimg.com/site/avatar.jpg"
        />
      </div>
      <div
        class="t-avatar t-avatar--circle"
        data-v-19cbd02e=""
      >
        <span>
          
          Avatar
          
        </span>
      </div>
      <div
        class="t-avatar t-avatar--circle"
      >
        
        <svg
          class="t-icon t-icon-ellipsis"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M3 9a1 1 0 110-2 1 1 0 010 2zM7 8a1 1 0 102 0 1 1 0 00-2 0zM12 8a1 1 0 102 0 1 1 0 00-2 0z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
        <span>
          
          
          
        </span>
        
      </div>
      
      
      
    </div>
  </div>
  <div
    class="demo-avatar-block"
    data-v-19cbd02e=""
  >
    <div
      class="t-avatar-group t-avatar--offset-right"
      data-v-19cbd02e=""
    >
      
      
      
      <div
        class="t-avatar t-avatar--circle"
        data-v-19cbd02e=""
      >
        <img
          alt=""
          src="https://tdesign.gtimg.com/site/avatar.jpg"
        />
      </div>
      <div
        class="t-avatar t-avatar--circle"
        data-v-19cbd02e=""
      >
        <span>
          
          Avatar
          
        </span>
      </div>
      <div
        class="t-avatar t-avatar--circle"
      >
        <span>
          
          
          
        </span>
      </div>
      
      
      
    </div>
  </div>
</div>
`;

exports[`csr snapshot test > csr test ./examples/avatar/demos/shape.vue 1`] = `
<div
  class="demo-avatar"
  data-v-0cd77318=""
>
  <div
    class="t-avatar t-avatar--circle"
    data-v-0cd77318=""
  >
    <span>
      
      W
      
    </span>
  </div>
  <div
    class="t-avatar t-avatar--round"
    data-v-0cd77318=""
  >
    <span>
      
       W 
      
    </span>
  </div>
</div>
`;

exports[`csr snapshot test > csr test ./examples/avatar/demos/size.vue 1`] = `
<div
  class="demo-avatar"
  data-v-7fafa9fe=""
>
  <div
    class="demo-avatar-block"
    data-v-7fafa9fe=""
  >
    <div
      class="t-avatar t-avatar--circle"
      data-v-7fafa9fe=""
    >
      <span>
        
         W 
        
      </span>
    </div>
    <div
      class="t-avatar t-avatar--circle"
      data-v-7fafa9fe=""
    >
      <span>
        
         W 
        
      </span>
    </div>
    <div
      class="t-avatar t-avatar--circle"
      data-v-7fafa9fe=""
    >
      <span>
        
         W 
        
      </span>
    </div>
    <div
      class="t-avatar t-avatar--circle"
      data-v-7fafa9fe=""
    >
      <span>
        
         W 
        
      </span>
    </div>
  </div>
  <div
    class="demo-avatar-block"
    data-v-7fafa9fe=""
  >
    <div
      class="t-avatar t-avatar--round"
      data-v-7fafa9fe=""
    >
      <span>
        
         W 
        
      </span>
    </div>
    <div
      class="t-avatar t-avatar--round"
      data-v-7fafa9fe=""
    >
      <span>
        
         W 
        
      </span>
    </div>
    <div
      class="t-avatar t-avatar--round"
      data-v-7fafa9fe=""
    >
      <span>
        
         W 
        
      </span>
    </div>
    <div
      class="t-avatar t-avatar--round"
      data-v-7fafa9fe=""
    >
      <span>
        
         W 
        
      </span>
    </div>
  </div>
</div>
`;

exports[`csr snapshot test > csr test ./examples/back-top/demos/base.vue 1`] = `
<div
  class="container"
>
  <div>
    滑动页面即可看到右下方的按钮
  </div>
  <transition-stub>
    <div
      class="t-back-top"
      style="right: 30px; bottom: 50px; display: none; position: fixed;"
    >
      <svg
        class="t-icon t-icon-arrow-up"
      >
        <use
          href="#t-icon-arrow-up"
        />
      </svg>
    </div>
  </transition-stub>
</div>
`;

exports[`csr snapshot test > csr test ./examples/back-top/demos/custom.vue 1`] = `
<div
  class="container"
>
  <div>
    滑动页面即可看到右下方的按钮
  </div>
  <transition-stub>
    <div
      class="t-back-top"
      style="right: 100px; bottom: 100px; display: none; position: fixed;"
    >
      
      <div
        style="width: 100%; background-color: rgb(242, 245, 246); box-shadow: 0 0 6px rgba(0, 0, 0, 0.12); text-align: center; color: rgb(25, 137, 250);"
      >
         回到顶部 
      </div>
      
    </div>
  </transition-stub>
</div>
`;
